--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Aarav Juneja",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3"
   },
   "eslintConfig": {
     "root": true,
@@ -28,7 +30,7 @@
       "one-var": 0,
       "strict": 0,
       "quotes": 0,
-      "semi": 2,
+      "semi": 0,
       "no-magic-numbers": 0,
       "func-names": 0,
       "prefer-arrow-callback": 0,
