--- a/package.json
+++ b/package.json
@@ -52,7 +52,13 @@
       "no-implicit-coercion": 1,
       "max-statements": 0,
       "no-process-env": 0,
-      "space-before-blocks": 0
+      "space-before-blocks": 0,
+      "consistent-return": [
+        2,
+        {
+          "treatUndefinedAsUnspecified": true
+        }
+      ]
     }
   }
 }
