--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,21 +1,14 @@
-name: Release-Notes-Preview
+name: Release Drafter
 
 on:
-  pull_request:
-    branches: [ main ]
-  issue_comment:
-    types: [ edited ]
+  push:
+    branches: 
+      - main
 
 jobs:
-  preview:
+  release:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: |
-        git fetch --prune --unshallow --tags
-    - uses: snyk/release-notes-preview@v1.6.1
-      with:
-        releaseBranch: main
+    - uses: release-drafter/release-drafter@v5
       env:
-        GITHUB_PR_USERNAME: ${{ github.actor }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
